[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.6.3",
    "dexscreener>=1.2",
    "faiss-gpu",
    "langchain>=0.3.15",
    "langchain-chroma>=0.2.1",
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.2",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.68",
    "openai>=1.60.1",
    "sentence-transformers>=3.4.0",
]
