[project]
name = "tempus"
version = "0.1.0"
description = "Next-Gen Quant AI Agents Framework on Solana"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-deepseek>=0.1.2",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.68",
    "openai>=1.60.1",
    "selenium>=4.29.0",
    "sentence-transformers>=3.4.0",
    "webdriver-manager>=4.0.2",
]
